// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateGroupByQueryVariablesFromBarChartConfiguration should generate variables with composite field 1`] = `
{
  "groupBy": [
    {
      "name": {
        "firstName": true,
      },
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromBarChartConfiguration should generate variables with single groupBy field 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromBarChartConfiguration should generate variables with two groupBy fields 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
    {
      "ownerId": true,
    },
  ],
}
`;
